# cvmart

./: README.md
yolov5_cvmart/: convert_dataset.py  export.py  ji.py  start_train.sh  train.py  trans_model.sh
yolov5_cvmart/data/: my.yaml
yolov5_cvmart/data/hyps/: hyp.scratch-med.yaml  hyp.scratch.yaml
yolov5_cvmart/utils/: loss.py  metrics.py
yolov5_cvmart/utils/loggers/: __init__.py
yolov5_cvmart_ev_sdk/: CMakeLists.txt  README.md
yolov5_cvmart_ev_sdk/3rd/wkt_parser/: CMakeLists.txt  wkt_parser_readme.md
yolov5_cvmart_ev_sdk/3rd/wkt_parser/include/: wkt_parser.h
yolov5_cvmart_ev_sdk/3rd/wkt_parser/src/: wkt_parser.cpp
yolov5_cvmart_ev_sdk/config/.ipynb_checkpoints/: algo_config-checkpoint.json  evdeploy_config-checkpoint.json
yolov5_cvmart_ev_sdk/doc/: EV_SDK接口规范说明.md  EV_SDK输出协议.md  人脸识别接口.md  人脸识别接口文档.md
yolov5_cvmart_ev_sdk/include/: ji.h  ji_error.h  ji_types.h  ji_utils.h
yolov5_cvmart_ev_sdk/src/: configuration.h  ji.cpp  sample_algorithm.h  sample_detector.cpp
yolov5_cvmart_ev_sdk/src/.ipynb_checkpoints/: SampleAlgorithm-checkpoint.cpp  sample_algorithm-checkpoint.cpp  sample_detector-checkpoint.h
yolov5_cvmart_ev_sdk/test/: CMakeLists.txt  test.cpp
